[gd_scene load_steps=9 format=3 uid="uid://cdh1w34hhdk7a"]

[ext_resource type="Script" path="res://Assets/Randomizer/Randomizer.gd" id="1_gadij"]
[ext_resource type="SpriteFrames" uid="uid://bxtt2obpy666c" path="res://Resourses/Animations/RandomizerAction.tres" id="1_k0jog"]

[sub_resource type="Animation" id="Animation_vkbm0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_t5a2k"]
resource_name = "Roll"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1.5), Vector2(1.5, 1), Vector2(1, 1.5)]
}

[sub_resource type="Animation" id="Animation_42jk7"]
resource_name = "Transition In"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1)]
}

[sub_resource type="Animation" id="Animation_xsdkj"]
resource_name = "TransitionOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_anld7"]
_data = {
"RESET": SubResource("Animation_vkbm0"),
"Roll": SubResource("Animation_t5a2k"),
"Transition In": SubResource("Animation_42jk7"),
"TransitionOut": SubResource("Animation_xsdkj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xi7b"]
size = Vector2(32, 32)

[node name="Randomizer" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_gadij")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_k0jog")
animation = &"idle"
frame_progress = 0.704108

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_anld7")
}
speed_scale = 2.0

[node name="RollTIme" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6xi7b")

[connection signal="input_event" from="." to="." method="OnInput"]
[connection signal="mouse_entered" from="." to="." method="MMove"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="SwitchAnnim"]
